# soloanvill.ru

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  gunicorn_conf.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
flaskr/: app.py  forms.py
flaskr/static/css/: main.css
flaskr/templates/: 404.html  500.html  base.html  index.html
templates/: base.html  index.html
